# AgileX

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/robotics_hw1/: MotorSpeed.h
devel/lib/message_filters_example/: filter_subscriber  filter_subscriber_policy  multi_publisher
devel/lib/pkgconfig/: message_filters_example.pc  robotics_hw1.pc
devel/lib/python2.7/dist-packages/robotics_hw1/msg/: _MotorSpeed.py  __init__.py
devel/share/common-lisp/ros/robotics_hw1/msg/: MotorSpeed.lisp  _package.lisp  _package_MotorSpeed.lisp  robotics_hw1-msg.asd
devel/share/gennodejs/ros/robotics_hw1/msg/: MotorSpeed.js  _index.js
devel/share/message_filters_example/cmake/: message_filters_exampleConfig.cmake
devel/share/robotics_hw1/cmake/: robotics_hw1-msg-paths.cmake  robotics_hw1Config.cmake
devel/share/roseus/ros/robotics_hw1/: manifest.l
devel/share/roseus/ros/robotics_hw1/msg/: MotorSpeed.l
src/Direct_kinematics/: CMakeLists.txt  package.xml
src/Direct_kinematics/cfg/: parameters.cfg
src/Direct_kinematics/launch/: launch1.launch
src/Direct_kinematics/src/: Kinematics.cpp
src/Direct_kinematics/srv/: reset_pose.srv  set_pose.srv
src/message_filters/: CMakeLists.txt  package.xml
src/message_filters/src/: sub_pol.cpp
src/parameter_estimator/: CMakeLists.txt  package.xml
src/parameter_estimator/src/: sub_pol.cpp
src/robotics_hw1/: CMakeLists.txt
src/robotics_hw1/msg/: CustomOdom.msg  DiffDriveSpeed.msg
src/rviz/: thre_odom.rviz
src/synchronizer/: CMakeLists.txt  package.xml
src/synchronizer/src/: synchronizer.cpp
